# gtk_global_menu

./: README.md  copyright  dbusmenu.hpp  gtk4_menubar_test.py  gtk_global_menu.py  main.cpp  meson.build  wayfire-socket.cpp  wayfire-socket.hpp
